[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/Misc/LogViewer.gd" type="Script" id=1]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Misc/custom_bttn.gd" type="Script" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.176471, 0.172549, 0.172549, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.121569, 0.117647, 0.117647, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="LogViewer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.29236
margin_top = -2.29236
margin_right = 1.29236
margin_bottom = -2.29236
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log_list" type="Panel" parent="Panel"]
anchor_left = 0.03
anchor_top = 0.078
anchor_right = 0.3
anchor_bottom = 0.929
margin_left = -0.400002
margin_top = -0.16
margin_bottom = 0.119995
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="Panel/log_list"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.585
margin_top = -262.5
margin_right = 129.415
margin_bottom = 247.5
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="Panel/log_list/container"]
margin_right = 260.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="Panel/log_list/container"]
margin_top = 65.0
margin_right = 260.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="Panel/log_list/container"]
margin_top = 130.0
margin_right = 260.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="Panel/log_list/container"]
margin_top = 195.0
margin_right = 260.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="Panel/log_list/container"]
margin_top = 260.0
margin_right = 260.0
margin_bottom = 305.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="Panel/log_list/container"]
margin_top = 325.0
margin_right = 260.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="Panel/log_list/container"]
margin_top = 390.0
margin_right = 260.0
margin_bottom = 435.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="Panel/log_list/container"]
margin_top = 455.0
margin_right = 260.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 45 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "log1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log" type="Panel" parent="Panel"]
anchor_left = 0.355
anchor_top = 0.078
anchor_right = 0.941
anchor_bottom = 0.876
margin_left = -0.400024
margin_top = -0.16
margin_right = 0.519897
margin_bottom = 0.279968
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="TextEdit" parent="Panel/log"]
anchor_right = 1.0
anchor_bottom = 1.0
readonly = true
show_line_numbers = true
draw_tabs = true

[node name="back" type="Button" parent="Panel"]
margin_left = 1044.0
margin_top = 643.0
margin_right = 1205.0
margin_bottom = 706.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed_id" from="Panel/log_list/container/1" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/2" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/3" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/4" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/5" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/6" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/7" to="." method="_on_1_pressed_id"]
[connection signal="pressed_id" from="Panel/log_list/container/8" to="." method="_on_1_pressed_id"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
